# phase-contracts

./: .gitignore  AUDIT_INFO.md  Cargo.toml  NOTICE  README.md  TMP_DEV_LOG.md  good_init_msg.json  good_init_response.json  package-lock.json  package.json  tmp.json
.cargo/: config
.cosmwander/osmo-test-4/contracts/: pf-dca.json
.github/workflows/: Basic.yml
artifacts/: checksums.txt  checksums_intermediate.txt  pf_dca-aarch64.wasm  pf_dca.wasm
contracts/dca/: Cargo.toml
contracts/dca/schema/: pf-dca.json
contracts/dca/src/: contract.rs  execute.rs  helpers.rs  state.rs
contracts/dca/src/multitest/: mod.rs  suite.rs
contracts/pf-dca/: Cargo.toml
contracts/pf-dca/.cargo/: config
contracts/pf-dca/examples/: schema.rs
contracts/pf-dca/schema/: pf-dca.json
contracts/pf-dca/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs  types.rs
contracts/pf-dca/src/multitest/: common.rs  dca.rs  integration_tests.rs  mod.rs  suite.rs
contracts/pf-factory/: Cargo.toml
schema/: dca_config.json  execute_msg.json  instantiate_msg.json  pf-dca.json  query_msg.json  state.json  upcoming_swap_response.json
src/: constants.rs  contract.rs  execute.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs  types.rs  utils.rs
