[workspace]
members = ["contracts/*", "packages/*"]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release.package.pf-factory]
codegen-units = 1
incremental = false

[profile.release.package.pf-dca]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false




