[workspace]
members = ["contracts/*", "packages/*"]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release.package.pf-factory]
codegen-units = 1
incremental = false

[profile.release.package.pf-dca]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


