[package]
name = "pf-dca"
version = "0.1.0"
authors = ["njerschow <nj18@nyu.edu>", "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.1.5"
cosmwasm-schema = { version = "1.1.5" }
cosmwasm-storage = "1.1.5"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw-utils = "1.0.1"
cw-denom = "2.0.2"
osmosis-std = "0.1.7"
strum = "0.24.1"
strum_macros = "0.24.2"
thiserror = { version = "1.0.37" }
phase-finance = { path = "../../packages/phase-finance" }
swaprouter = { path = "./../../packages/swaprouter", features = [
  "imported",
] }
regex = "1.7.0"

[dev-dependencies]
cw-multi-test = "0.16"
derivative = "2"
anyhow = "1"

[profile.release]
overflow-checks = true